--- a/templates/cards-1.html
+++ b/templates/cards-1.html
@@ -5,7 +5,8 @@
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
         <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-gray-900 mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-gray-900 mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker
+          </h3>
           <p class="inline-flex items-center">
             <span class="text-gray-700 text-sm">Read More</span>
           </p>
@@ -17,7 +18,8 @@
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
         <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-gray-900 mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-gray-900 mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker
+          </h3>
           <p class="inline-flex items-center">
             <span class="text-gray-700 text-sm">Read More</span>
           </p>
@@ -29,7 +31,8 @@
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
         <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-gray-900 mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-gray-900 mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker
+          </h3>
           <p class="inline-flex items-center">
             <span class="text-gray-700 text-sm">Read More</span>
           </p>
@@ -41,7 +44,8 @@
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
         <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-gray-900 mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-gray-900 mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker
+          </h3>
           <p class="inline-flex items-center">
             <span class="text-gray-700 text-sm">Read More</span>
           </p>
@@ -53,7 +57,8 @@
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
         <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-gray-900 mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-gray-900 mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker
+          </h3>
           <p class="inline-flex items-center">
             <span class="text-gray-700 text-sm">Read More</span>
           </p>
