--- a/templates/cards-4.html
+++ b/templates/cards-4.html
@@ -1,150 +1,161 @@
 <div class="bg-gray-300 font-sans text-gray-700">
 
-<div class="flex">
-  <div class="bg-blue-900 h-screen w-1/4">
-	<div class="flex bg-blue-800 items-center p-6">
-          <div class="">
-          <a href="#"><img src="images/assets/avatar_tailwind.jpg"
-            alt="avatar"
-            class="rounded-full h-12 w-12 mr-6"></a>                      
-          </div>
+    <div class="flex">
+        <div class="bg-blue-900 h-screen w-1/4">
+            <div class="flex bg-blue-800 items-center p-6">
+                <div class="">
+                    <a href="#"><img src="images/assets/avatar_tailwind.jpg" alt="avatar"
+                            class="rounded-full h-12 w-12 mr-6"></a>
+                </div>
 
-          <div class="text-xl font-bold text-white">
-             VirKill Almasy
-          </div>
-    </div>
-    <div class="border-b">
-    </div>
-    <div class="p-4 text-white cursor-pointer hover:bg-blue-800">
-      <i class="fa fa-home mr-5"></i>Dashboard
-    </div>
-    <div class="p-4 text-white cursor-pointer hover:bg-blue-800">
-      <i class="fa fa-users mr-5"></i>Backers
-    </div> 
-    <div class="p-4 text-white cursor-pointer hover:bg-blue-800">
-      <i class="fa fa-chair mr-5"></i>Tiers
-    </div> 
-    <div class="p-4 text-white cursor-pointer bg-blue-800">
-      <i class="fa fa-home mr-5"></i>Page
-    </div>     
-  </div>
-  
-  <div class="bg-white w-48">
-    <div class="bg-blue-100 uppercase p-3 font-semibold cursor-pointer">
-     overview
-    </div>
-    <div class="uppercase p-3 font-semibold cursor-pointer hover:bg-blue-100">
-      view page
-    </div> 
-  </div>
+                <div class="text-xl font-bold text-white">
+                    VirKill Almasy
+                </div>
+            </div>
+            <div class="border-b">
+            </div>
+            <div class="p-4 text-white cursor-pointer hover:bg-blue-800">
+                <i class="fa fa-home mr-5"></i>Dashboard
+            </div>
+            <div class="p-4 text-white cursor-pointer hover:bg-blue-800">
+                <i class="fa fa-users mr-5"></i>Backers
+            </div>
+            <div class="p-4 text-white cursor-pointer hover:bg-blue-800">
+                <i class="fa fa-chair mr-5"></i>Tiers
+            </div>
+            <div class="p-4 text-white cursor-pointer bg-blue-800">
+                <i class="fa fa-home mr-5"></i>Page
+            </div>
+        </div>
 
-<div class="flex justify-center w-full px-8">
-	<div class="flex flex-wrap mt-8 justify-end">
-          <div class="w-64 mx-2">
-      <div class="bg-white mb-8 px-6 py-4 rounded shadow-xl w-full hover:shadow-2xl">
-    	<div class="float-right">
-        	<i class="fa fa-trash mr-3"></i> 
-          	<i class="fa fa-edit "></i> 
-      	</div>
-      	<div class="font-semibold mb-3">
-          Tier 1
+        <div class="bg-white w-48">
+            <div class="bg-blue-100 uppercase p-3 font-semibold cursor-pointer">
+                overview
+            </div>
+            <div class="uppercase p-3 font-semibold cursor-pointer hover:bg-blue-100">
+                view page
+            </div>
         </div>
-        <div>
-          <img src="images/demo-bg.png" />
+
+        <div class="flex justify-center w-full px-8">
+            <div class="flex flex-wrap mt-8 justify-end">
+                <div class="w-64 mx-2">
+                    <div class="bg-white mb-8 px-6 py-4 rounded shadow-xl w-full hover:shadow-2xl">
+                        <div class="float-right">
+                            <i class="fa fa-trash mr-3"></i>
+                            <i class="fa fa-edit "></i>
+                        </div>
+                        <div class="font-semibold mb-3">
+                            Tier 1
+                        </div>
+                        <div>
+                            <img src="images/demo-bg.png" />
+                        </div>
+                        <div class="mt-3 text-sm">
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+                            et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                            Lorem ipsum dolor sit amet.
+                        </div>
+                        <div class="text-sm my-2 font-semibold">
+                            Price Rp 40,000 per month
+                        </div>
+                        <div class="text-sm my-2 font-semibold">
+                            Published 17 June 2019
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="w-64 mx-2">
+                    <div class="bg-white mb-8 px-6 py-4 rounded shadow-xl w-full hover:shadow-2xl">
+                        <div class="float-right">
+                            <i class="fa fa-trash mr-3"></i>
+                            <i class="fa fa-edit "></i>
+                        </div>
+                        <div class="font-semibold mb-3">
+                            Tier 2
+                        </div>
+                        <div>
+                            <img src="images/demo-bg.png" />
+                        </div>
+                        <div class="mt-3 text-sm">
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+                            et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                            Lorem ipsum dolor sit amet.
+                        </div>
+                        <div class="text-sm my-2 font-semibold">
+                            Price Rp 40,000 per month
+                        </div>
+                        <div class="text-sm my-2 font-semibold">
+                            Published 17 June 2019
+                        </div>
+                    </div>
+                </div>
+
+                <div class="w-64 mx-2">
+                    <div class="bg-white mb-8 px-6 py-4 rounded shadow-xl w-full hover:shadow-2xl">
+                        <div class="float-right">
+                            <i class="fa fa-trash mr-3"></i>
+                            <i class="fa fa-edit "></i>
+                        </div>
+                        <div class="font-semibold mb-3">
+                            Tier 3
+                        </div>
+                        <div>
+                            <img src="images/demo-bg.png" />
+                        </div>
+                        <div class="mt-3 text-sm">
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+                            et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                            Lorem ipsum dolor sit amet.
+                        </div>
+                        <div class="text-sm my-2 font-semibold">
+                            Price Rp 40,000 per month
+                        </div>
+                        <div class="text-sm my-2 font-semibold">
+                            Published 17 June 2019
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="w-64 mx-2">
+                    <div class="bg-white mb-8 px-6 py-4 rounded shadow-xl w-full hover:shadow-2xl">
+                        <div class="float-right">
+                            <i class="fa fa-trash mr-3"></i>
+                            <i class="fa fa-edit "></i>
+                        </div>
+                        <div class="font-semibold mb-3">
+                            Tier 4
+                        </div>
+                        <div>
+                            <img src="images/demo-bg.png" />
+                        </div>
+                        <div class="mt-3 text-sm">
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+                            et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                            Lorem ipsum dolor sit amet.
+                        </div>
+                        <div class="text-sm my-2 font-semibold">
+                            Price Rp 40,000 per month
+                        </div>
+                        <div class="text-sm my-2 font-semibold">
+                            Published 17 June 2019
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
         </div>
-        <div class="mt-3 text-sm">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </div>
-        <div class="text-sm my-2 font-semibold">
-          Price Rp 40,000 per month
-        </div>
-        <div class="text-sm my-2 font-semibold">
-          Published 17 June 2019
-        </div>         
-      </div>
+
+
+
+
     </div>
-
-
-          <div class="w-64 mx-2">
-      <div class="bg-white mb-8 px-6 py-4 rounded shadow-xl w-full hover:shadow-2xl">
-    	<div class="float-right">
-        	<i class="fa fa-trash mr-3"></i> 
-          	<i class="fa fa-edit "></i> 
-      	</div>
-      	<div class="font-semibold mb-3">
-          Tier 2
-        </div>
-        <div>
-          <img src="images/demo-bg.png" />
-        </div>
-        <div class="mt-3 text-sm">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </div>
-        <div class="text-sm my-2 font-semibold">
-          Price Rp 40,000 per month
-        </div>
-        <div class="text-sm my-2 font-semibold">
-          Published 17 June 2019
-        </div>         
-      </div>
-    </div>    
-      
-    <div class="w-64 mx-2">
-      <div class="bg-white mb-8 px-6 py-4 rounded shadow-xl w-full hover:shadow-2xl">
-    	<div class="float-right">
-        	<i class="fa fa-trash mr-3"></i> 
-          	<i class="fa fa-edit "></i> 
-      	</div>
-      	<div class="font-semibold mb-3">
-          Tier 3
-        </div>
-        <div>
-          <img src="images/demo-bg.png" />
-        </div>
-        <div class="mt-3 text-sm">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </div>
-        <div class="text-sm my-2 font-semibold">
-          Price Rp 40,000 per month
-        </div>
-        <div class="text-sm my-2 font-semibold">
-          Published 17 June 2019
-        </div>         
-      </div>
-    </div>          
-      
-      
-    <div class="w-64 mx-2">
-      <div class="bg-white mb-8 px-6 py-4 rounded shadow-xl w-full hover:shadow-2xl">
-    	<div class="float-right">
-        	<i class="fa fa-trash mr-3"></i> 
-          	<i class="fa fa-edit "></i> 
-      	</div>
-      	<div class="font-semibold mb-3">
-          Tier 4
-        </div>
-        <div>
-          <img src="images/demo-bg.png" />
-        </div>
-        <div class="mt-3 text-sm">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </div>
-        <div class="text-sm my-2 font-semibold">
-          Price Rp 40,000 per month
-        </div>
-        <div class="text-sm my-2 font-semibold">
-          Published 17 June 2019
-        </div>         
-      </div>
-    </div>      
-      
-      
-   </div>
-</div>
-      
-  
-      
-      
-</div>
 
 </div>
