--- a/templates/cta-2.html
+++ b/templates/cta-2.html
@@ -5,7 +5,9 @@
       <p class="text-gray-700 mt-2 mb-6">But I must explain to you how all this mistaken idea of denouncing </p>
     </div>
     <div class="w-full sm:w-1/4 flex justify-start sm:justify-center items-center pl-6 pb-6 sm:pl-0 sm:pb-0">
-      <button class=" bg-black hover:bg-gray-900 text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wider">Learn More</button>
+      <button
+        class=" bg-black hover:bg-gray-900 text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wider">Learn
+        More</button>
     </div>
   </div>
 </section>
