--- a/templates/feed-1.html
+++ b/templates/feed-1.html
@@ -16,7 +16,8 @@
         </div>
       </div>
       <div class="">
-        <p class="my-3 text-sm">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+        <p class="my-3 text-sm">Many desktop publishing packages and web page editors now use Lorem Ipsum as their
+          default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
         <div class="pb-2">
           <span class="mr-4">
             <a href="#" class="text-gray-500 no-underline hover:text-black">
@@ -42,7 +43,9 @@
               <span class="text-gray-700">May 26</span>
             </div>
             <div class="">
-              <p class="my-3 text-sm">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+              <p class="my-3 text-sm">Many desktop publishing packages and web page editors now use Lorem Ipsum as their
+                default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
+              </p>
               <div class="pb-2">
                 <span class="mr-4">
                   <a href="#" class="text-gray-500 no-underline hover:text-black">
@@ -71,7 +74,9 @@
               <span class="text-gray-700">May 26</span>
             </div>
             <div class="">
-              <p class="my-3 text-sm">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+              <p class="my-3 text-sm">Many desktop publishing packages and web page editors now use Lorem Ipsum as their
+                default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
+              </p>
               <div class="pb-2">
                 <span class="mr-4">
                   <a href="#" class="text-gray-500 no-underline hover:text-black">
