--- a/templates/footer-1.html
+++ b/templates/footer-1.html
@@ -13,7 +13,8 @@
       </ul>
       <ul class="text-gray-700  font-thin flex flex-col text-left">
         <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wider">Company</li>
-        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Press Release</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Press Release</a>
+        </li>
         <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Mission</a></li>
         <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Strategy</a></li>
         <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Works</a></li>
@@ -21,16 +22,22 @@
       <ul class="text-gray-700  font-thin flex flex-col text-left">
         <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wider">Info</li>
         <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Support</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Developers</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Customer Services</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Started Guide</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Developers</a>
+        </li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Customer
+            Services</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Started Guide</a>
+        </li>
       </ul>
       <div class="text-gray-700 flex flex-col">
         <div class="inline-block py-2 px-3 text-white uppercase font-medium tracking-wider">Follow Us</div>
         <div class="flex pl-4 justify-start">
-          <a class="block flex items-center text-white hover:text-gray-500 mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
-          <a class="block flex items-center text-white hover:text-gray-500 mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
-          <a class="block flex items-center text-white hover:text-gray-500 no-underline" href="#"><i class="fab fa-twitter"></i></a>
+          <a class="block flex items-center text-white hover:text-gray-500 mr-6 no-underline" href="#"><i
+              class="fab fa-github-alt"></i></a>
+          <a class="block flex items-center text-white hover:text-gray-500 mr-6 no-underline" href="#"><i
+              class="fab fa-slack"></i></a>
+          <a class="block flex items-center text-white hover:text-gray-500 no-underline" href="#"><i
+              class="fab fa-twitter"></i></a>
         </div>
       </div>
     </div>
