--- a/templates/cta-1.html
+++ b/templates/cta-1.html
@@ -1,5 +1,7 @@
 <section class="font-sans text-center my-8 px-8">
   <h1 class="capitalize font-medium">Ready to get started?</h1>
   <p class="text-gray-700 mt-2 mb-6">But I must explain to you how all this mistaken idea of denouncing </p>
-  <button class="bg-black hover:bg-gray-900 text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wider">Learn More</button>
+  <button
+    class="bg-black hover:bg-gray-900 text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wider">Learn
+    More</button>
 </section>
