--- a/templates/features-4.html
+++ b/templates/features-4.html
@@ -6,22 +6,27 @@
     <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
       <div class="w-14 h-14 rounded-full mr-4 bg-gray-400" alt=""></div>
       <h2 class="my-4 font-medium">Cras ornare tristique elit.</h2>
-      <p class="leading-normal mb-4 text-gray-700">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.</p>
+      <p class="leading-normal mb-4 text-gray-700">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor
+        mauris sit amet orci. Aenean dignissim pellentesque felis.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
       <div class="w-14 h-14 rounded-full mr-4 bg-gray-400" alt=""></div>
       <h2 class="my-4 font-medium">Vivamus vestibulum ntulla nec ante.</h2>
-      <p class="leading-normal mb-4 text-gray-700">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p class="leading-normal mb-4 text-gray-700">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
       <div class="w-14 h-14 rounded-full mr-4 bg-gray-400" alt=""></div>
       <h2 class="my-4 font-medium">Praesent placerat risus quis eros.</h2>
-      <p class="leading-normal mb-4 text-gray-700">Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</p>
+      <p class="leading-normal mb-4 text-gray-700">Morbi in sem quis dui placerat ornare. Pellentesque odio nisi,
+        euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
       <div class="w-14 h-14 rounded-full mr-4 bg-gray-400" alt=""></div>
       <h2 class="my-4 font-medium">Fusce pellentesque suscipit nibh.</h2>
-      <p class="leading-normal mb-4 text-gray-700">Praesent dapibus, neque id cursus faucibus, tortor neque egestas auguae, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</p>
+      <p class="leading-normal mb-4 text-gray-700">Praesent dapibus, neque id cursus faucibus, tortor neque egestas
+        auguae, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor,
+        facilisis luctus, metus.</p>
     </div>
   </div>
 </section>
