--- a/templates/footer-3.html
+++ b/templates/footer-3.html
@@ -1,20 +1,30 @@
 <footer class="font-sans bg-white py-8 px-4">
-  <div class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
+  <div
+    class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
     <a href="#" class="block mr-4 w-full md:w-1/4">
       <img src="https://stitches-cdn.hyperyolo.com/logo.png" class="w-32 -ml-8 md:ml-0" alt="logo">
     </a>
     <div class="w-full text-gray-900 mt-6 md:mt-0 leading-normal">
       <h4 class="py-2 uppercase font-bold tracking-wider">About US</h4>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+        a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
+        of Lorem Ipsum.</p>
     </div>
     <div class="text-gray-700 flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0">
       <h4 class="inline-block py-2 px-3 uppercase font-bold tracking-wider text-gray-900">Follow Us</h4>
       <div class="flex pl-0 md:pl-4 justify-start">
-        <a class="block flex items-center text-gray-900 hover:text-black mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
-        <a class="block flex items-center text-gray-900 hover:text-black mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
-        <a class="block flex items-center text-gray-900 hover:text-black no-underline" href="#"><i class="fab fa-twitter"></i></a>
+        <a class="block flex items-center text-gray-900 hover:text-black mr-6 no-underline" href="#"><i
+            class="fab fa-github-alt"></i></a>
+        <a class="block flex items-center text-gray-900 hover:text-black mr-6 no-underline" href="#"><i
+            class="fab fa-slack"></i></a>
+        <a class="block flex items-center text-gray-900 hover:text-black no-underline" href="#"><i
+            class="fab fa-twitter"></i></a>
       </div>
     </div>
   </div>
-  <div class="pt-4 mt-4 text-gray-800 text-xs border-t border-gray-200 text-center"> ©2019 Hyperyolo. All rights reserved.</div>
+  <div class="pt-4 mt-4 text-gray-800 text-xs border-t border-gray-200 text-center"> ©2019 Hyperyolo. All rights
+    reserved.</div>
 </footer>
