--- a/templates/form-1.html
+++ b/templates/form-1.html
@@ -1,20 +1,14 @@
 <form class="font-sans text-sm rounded w-full max-w-xl mx-auto my-8 px-8 pt-6 pb-8">
-  <input 
-      type="text"
-      class="block border border-gray-400 w-full p-3 rounded mb-4"
-      name="fullname"
-      placeholder="Full Name" />
-  <input 
-      type="text"
-      class="block border border-gray-400 w-full p-3 rounded mb-4"
-      name="fullname"
-      placeholder="Full Name" />
-<div class="flex items-center justify-between">
-<button class="bg-primary-std rounded hover:bg-primary-light text-white py-2 px-4" type="button">
-Sign In
-</button>
-<a class="inline-block align-baseline text-gray-500 hover:text-gray-800" href="#">
-Forgot Password?
-</a>
-</div>
+  <input type="text" class="block border border-gray-400 w-full p-3 rounded mb-4" name="fullname"
+    placeholder="Full Name" />
+  <input type="text" class="block border border-gray-400 w-full p-3 rounded mb-4" name="fullname"
+    placeholder="Full Name" />
+  <div class="flex items-center justify-between">
+    <button class="bg-primary-std rounded hover:bg-primary-light text-white py-2 px-4" type="button">
+      Sign In
+    </button>
+    <a class="inline-block align-baseline text-gray-500 hover:text-gray-800" href="#">
+      Forgot Password?
+    </a>
+  </div>
 </form>
