--- a/templates/form-6.html
+++ b/templates/form-6.html
@@ -1,96 +1,98 @@
 <div class="bg-gray-300 font-sans text-gray-700">
 
-<div class="flex flex-col lg:flex-row">
-  <div class="bg-blue-900 h-screen w-1/4">
-	<div class="flex bg-blue-800 items-center p-6">
-          <div class="">
-          <a href="#"><img src="images/assets/avatar_tailwind.jpg"
-            alt="avatar"
-            class="rounded-full h-12 w-12 mr-6"></a>                      
-          </div>
+    <div class="flex flex-col lg:flex-row">
+        <div class="bg-blue-900 h-screen w-1/4">
+            <div class="flex bg-blue-800 items-center p-6">
+                <div class="">
+                    <a href="#"><img src="images/assets/avatar_tailwind.jpg" alt="avatar"
+                            class="rounded-full h-12 w-12 mr-6"></a>
+                </div>
 
-          <div class="text-xl font-bold text-white">
-             VirKill Almasy
-          </div>
-    </div>
-    <div class="border-b">
-    </div>
-    <div class="p-4 text-white cursor-pointer bg-blue-800">
-      <i class="fa fa-home mr-5"></i>Dashboard
-    </div>
-    <div class="p-4 text-white cursor-pointer hover:bg-blue-800">
-      <i class="fa fa-users mr-5"></i>Backers
-    </div> 
-    <div class="p-4 text-white cursor-pointer hover:bg-blue-800">
-      <i class="fa fa-chair mr-5"></i>Tiers
-    </div> 
-    <div class="p-4 text-white cursor-pointer hover:bg-blue-800">
-      <i class="fa fa-home mr-5"></i>Page
-    </div>     
-  </div>
-  
-  <div class="bg-white w-48">
-    <div class="bg-blue-100 uppercase p-3 font-semibold cursor-pointer">
-     new
-    </div>
-    <div class="uppercase p-3 font-semibold cursor-pointer hover:bg-blue-100">
-      published
-    </div>    
-  </div>
-
-  <div class="bg-gray-300 flex justify-center w-full">
-    <div class="bg-white my-8 rounded shadow-xl w-1/2 ">
-      <div class="flex justify-between p-6">
-        <div class="uppercase font-semibold">
-          text
+                <div class="text-xl font-bold text-white">
+                    VirKill Almasy
+                </div>
+            </div>
+            <div class="border-b">
+            </div>
+            <div class="p-4 text-white cursor-pointer bg-blue-800">
+                <i class="fa fa-home mr-5"></i>Dashboard
+            </div>
+            <div class="p-4 text-white cursor-pointer hover:bg-blue-800">
+                <i class="fa fa-users mr-5"></i>Backers
+            </div>
+            <div class="p-4 text-white cursor-pointer hover:bg-blue-800">
+                <i class="fa fa-chair mr-5"></i>Tiers
+            </div>
+            <div class="p-4 text-white cursor-pointer hover:bg-blue-800">
+                <i class="fa fa-home mr-5"></i>Page
+            </div>
         </div>
-          <div>
-            <a href="#"><i class="fa fa-window-close"></i></a>
-          </div>
-      </div>
-      
-      <div class="border-b-2"></div>
-      
-      <div class="mt-4">
-        	<div class="p-6">
-				<div class="mb-6">
-                  	<input class="border-b-2 w-full p-1 focus:outline-none focus:border-teal-500" name="" value="virkill@almasy.com" placeholder="Post title..."/>
-              	</div>
-              <div class="mb-6">
-              <textarea class="w-full p-3 focus:outline-none h-64 border-2 focus:border-teal-500" placeholder="Your content here..."></textarea>                
-              </div>	
-         	</div> 
-      </div>
-      
-      <div class="border-b-2"></div>
-      
-		 	<div class="flex m-8">
-              <div class="w-2/5 mr-6 text-lg font-semibold">
-                View Option
-              </div>
-              
-              <div class="w-4/5">
 
-                <select class="w-full border-b-2 h-8 bg-white">
-                  <option>Non published</option>
-                  <option>Public</option>
-                  <option>Tier 1 and above</option>
-                  <option>Tier 2 and above</option>
-                  <option>Tier 3 and above</option>
-                  <option>Tier 4 and above</option>
-                  <option>Tier 5 and above</option>
-                </select>
-              </div>  
-         	</div> 
-      
-      <div>
-        <div class="btn w-1/4 bg-primary-std float-right mx-6 text-white hover:bg-primary-light hover:shadow-none">
-          save
-        </div>        
-      </div>
-      
+        <div class="bg-white w-48">
+            <div class="bg-blue-100 uppercase p-3 font-semibold cursor-pointer">
+                new
+            </div>
+            <div class="uppercase p-3 font-semibold cursor-pointer hover:bg-blue-100">
+                published
+            </div>
+        </div>
+
+        <div class="bg-gray-300 flex justify-center w-full">
+            <div class="bg-white my-8 rounded shadow-xl w-1/2 ">
+                <div class="flex justify-between p-6">
+                    <div class="uppercase font-semibold">
+                        text
+                    </div>
+                    <div>
+                        <a href="#"><i class="fa fa-window-close"></i></a>
+                    </div>
+                </div>
+
+                <div class="border-b-2"></div>
+
+                <div class="mt-4">
+                    <div class="p-6">
+                        <div class="mb-6">
+                            <input class="border-b-2 w-full p-1 focus:outline-none focus:border-teal-500" name=""
+                                value="virkill@almasy.com" placeholder="Post title..." />
+                        </div>
+                        <div class="mb-6">
+                            <textarea class="w-full p-3 focus:outline-none h-64 border-2 focus:border-teal-500"
+                                placeholder="Your content here..."></textarea>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="border-b-2"></div>
+
+                <div class="flex m-8">
+                    <div class="w-2/5 mr-6 text-lg font-semibold">
+                        View Option
+                    </div>
+
+                    <div class="w-4/5">
+
+                        <select class="w-full border-b-2 h-8 bg-white">
+                            <option>Non published</option>
+                            <option>Public</option>
+                            <option>Tier 1 and above</option>
+                            <option>Tier 2 and above</option>
+                            <option>Tier 3 and above</option>
+                            <option>Tier 4 and above</option>
+                            <option>Tier 5 and above</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div>
+                    <div
+                        class="btn w-1/4 bg-primary-std float-right mx-6 text-white hover:bg-primary-light hover:shadow-none">
+                        save
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
-  </div>  
-</div>
 
 </div>
