format beautify code

--- a/templates/form-8.html
+++ b/templates/form-8.html
@@ -1,55 +1,39 @@
-<div class="fixed left-0 top-0 w-full bg-black h-full overflow-auto hidden-x" style="background-color: rgba(0,0,0,0.8); z-index: 9 ">
-  
-                <div class="container max-w-xl mx-auto my-8 flex-1 flex flex-col items-center justify-center px-2">
-                    <div class="bg-white px-6 py-8 rounded-lg shadow-lg text-black">
-                      		<i class="fa fa-window-close float-right hover:text-secondary-std cursor-pointer"></i>
-                          <img src="http://127.0.0.1:8088/images/backer.png" class="w-20 mx-auto">
-                        <h1 class="mb-8 text-3xl text-center">Sign up</h1>
-                        <input 
-                            type="text"
-                            class="block border border-gray-400 w-full p-3 rounded mb-4"
-                            name="fullname"
-                            placeholder="Full Name" />
-    
-                        <input 
-                            type="text"
-                            class="block border border-gray-400 w-full p-3 rounded mb-4"
-                            name="email"
-                            placeholder="Email" />
-    
-                        <input 
-                            type="password"
-                            class="block border border-gray-400 w-full p-3 rounded mb-4"
-                            name="password"
-                            placeholder="Password" />
-                        <input 
-                            type="password"
-                            class="block border border-gray-400 w-full p-3 rounded mb-4"
-                            name="confirm_password"
-                            placeholder="Confirm Password" />
-    
-                      
-        <button class="bg-primary-std rounded w-full hover:bg-primary-light text-white py-3 px-4" type="button">
-        Create my account
-        </button>                  
-    
-                        <div class="text-center text-sm text-gray-700 mt-4">
-                            By signing up, you agree to the 
-                            <a class="no-underline border-b border-gray-700 text-gray-700" href="#">
-                                Terms of Service
-                            </a> and 
-                            <a class="no-underline border-b border-gray-700 text-gray-700" href="#">
-                                Privacy Policy
-                            </a>
-                        </div>
-                    </div>
-    
-                    <div class="text-gray-700 mt-6">
-                        Already have an account? 
-                        <a class="no-underline border-b border-blue-500 text-blue-500  href="../login/">
-                            Log in
-                        </a>.
-                    </div>
+<div class="fixed left-0 top-0 w-full bg-black h-full overflow-auto hidden-x"
+    style="background-color: rgba(0,0,0,0.8); z-index: 9 ">
+
+    <div class="container max-w-xl mx-auto my-8 flex-1 flex flex-col items-center justify-center px-2">
+        <div class="bg-white px-6 py-8 rounded-lg shadow-lg text-black">
+            <i class="fa fa-window-close float-right hover:text-secondary-std cursor-pointer"></i>
+            <img src="http://127.0.0.1:8088/images/backer.png" class="w-20 mx-auto">
+            <h1 class="mb-8 text-3xl text-center">Sign up</h1>
+            <input type="text" class="block border border-gray-400 w-full p-3 rounded mb-4" name="fullname"
+                placeholder="Full Name" />
+
+            <input type="text" class="block border border-gray-400 w-full p-3 rounded mb-4" name="email"
+                placeholder="Email" />
+
+            <input type="password" class="block border border-gray-400 w-full p-3 rounded mb-4" name="password"
+                placeholder="Password" />
+            <input type="password" class="block border border-gray-400 w-full p-3 rounded mb-4" name="confirm_password"
+                placeholder="Confirm Password" />
+
+
+            <button class="bg-primary-std rounded w-full hover:bg-primary-light text-white py-3 px-4" type="button">
+                Create my account
+            </button>
+
+            <div class="text-center text-sm text-gray-700 mt-4">
+                By signing up, you agree to the
+                <a class="no-underline border-b border-gray-700 text-gray-700" href="#">
+                    Terms of Service
+                </a> and
+                <a class="no-underline border-b border-gray-700 text-gray-700" href="#">
+                    Privacy Policy
+                </a>
+            </div>
+        </div>
+
+        <div class="text-gray-700 mt-6">
+            Already have an account?
+            <a class="no-underline border-b border-blue-500 text-blue-500  href=" ../login/"> Log in </a>. </div> </div>
                 </div>
-  
-</div>
