--- a/templates/hero-4.html
+++ b/templates/hero-4.html
@@ -1,64 +1,55 @@
+<div class="hero h-64 bg-cover bg-primary-std h-112"></div>
 
-    
-    <div class="hero h-64 bg-cover bg-primary-std h-112"></div>
-    
-    <div class="bg-white shadow">
-        <div class="container mx-auto flex flex-col lg:flex-row items-center lg:relative">
-            <div class="w-full lg:w-1/4">
-                <img src="images/backer.png"
-                     alt="logo"
-                     class="rounded-full bg-white p-4 shadow h-48 w-48 lg:absolute lg:left-0 lg:top-0 lg:-mt-24">
+<div class="bg-white shadow">
+    <div class="container mx-auto flex flex-col lg:flex-row items-center lg:relative">
+        <div class="w-full lg:w-1/4">
+            <img src="images/backer.png" alt="logo"
+                class="rounded-full bg-white p-4 shadow h-48 w-48 lg:absolute lg:left-0 lg:top-0 lg:-mt-24">
+        </div>
+        <div class="w-full lg:w-1/2">
+            <ul class="flex">
+                <li class="text-center py-3 px-4 border-b-2 border-solid border-transparent border-primary-std">
+                    <a href="#" class="text-gray-800 hover:no-underline">
+                        <div class="text-sm font-bold tracking-tighter mb-1">Tweets</div>
+                        <div class="text-lg tracking-tighter font-bold text-primary-std">60</div>
+                    </a>
+                </li>
+                <li class="text-center py-3 px-4 border-b-2 border-solid border-transparent hover:border-primary-std">
+                    <a href="#" class="text-gray-800 hover:no-underline">
+                        <div class="text-sm font-bold tracking-tighter mb-1">Following</div>
+                        <div class="text-lg tracking-tighter font-bold hover:text-primary-std">4</div>
+                    </a>
+                </li>
+                <li class="text-center py-3 px-4 border-b-2 border-solid border-transparent hover:border-primary-std">
+                    <a href="#" class="text-gray-800 hover:no-underline">
+                        <div class="text-sm font-bold tracking-tighter mb-1">Followers</div>
+                        <div class="text-lg tracking-tighter font-bold hover:text-primary-std">3,810</div>
+                    </a>
+                </li>
+                <li class="text-center py-3 px-4 border-b-2 border-solid border-transparent hover:border-primary-std">
+                    <a href="#" class="text-gray-800 hover:no-underline">
+                        <div class="text-sm font-bold tracking-tighter mb-1">Likes</div>
+                        <div class="text-lg tracking-tighter font-bold hover:text-primary-std">9</div>
+                    </a>
+                </li>
+                <li class="text-center py-3 px-4 border-b-2 border-solid border-transparent hover:border-primary-std">
+                    <a href="#" class="text-gray-800 hover:no-underline">
+                        <div class="text-sm font-bold tracking-tighter mb-1">Moments</div>
+                        <div class="text-lg tracking-tighter font-bold hover:text-primary-std">1</div>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="w-full lg:w-1/4 flex my-4 lg:my-0 lg:justify-end items-center">
+            <div class="mr-6">
+                <button
+                    class="bg-primary-std hover:bg-primary-light text-white font-medium py-2 px-4 rounded-full">Following
+                </button>
             </div>
-            <div class="w-full lg:w-1/2">
-                <ul class="flex">
-                    <li class="text-center py-3 px-4 border-b-2 border-solid border-transparent border-primary-std">
-                        <a href="#"
-                           class="text-gray-800 hover:no-underline">
-                            <div class="text-sm font-bold tracking-tighter mb-1">Tweets</div>
-                            <div class="text-lg tracking-tighter font-bold text-primary-std">60</div>
-                        </a>
-                    </li>
-                    <li class="text-center py-3 px-4 border-b-2 border-solid border-transparent hover:border-primary-std">
-                        <a href="#"
-                           class="text-gray-800 hover:no-underline">
-                            <div class="text-sm font-bold tracking-tighter mb-1">Following</div>
-                            <div class="text-lg tracking-tighter font-bold hover:text-primary-std">4</div>
-                        </a>
-                    </li>
-                    <li class="text-center py-3 px-4 border-b-2 border-solid border-transparent hover:border-primary-std">
-                        <a href="#"
-                           class="text-gray-800 hover:no-underline">
-                            <div class="text-sm font-bold tracking-tighter mb-1">Followers</div>
-                            <div class="text-lg tracking-tighter font-bold hover:text-primary-std">3,810</div>
-                        </a>
-                    </li>
-                    <li class="text-center py-3 px-4 border-b-2 border-solid border-transparent hover:border-primary-std">
-                        <a href="#"
-                           class="text-gray-800 hover:no-underline">
-                            <div class="text-sm font-bold tracking-tighter mb-1">Likes</div>
-                            <div class="text-lg tracking-tighter font-bold hover:text-primary-std">9</div>
-                        </a>
-                    </li>
-                    <li class="text-center py-3 px-4 border-b-2 border-solid border-transparent hover:border-primary-std">
-                        <a href="#"
-                           class="text-gray-800 hover:no-underline">
-                            <div class="text-sm font-bold tracking-tighter mb-1">Moments</div>
-                            <div class="text-lg tracking-tighter font-bold hover:text-primary-std">1</div>
-                        </a>
-                    </li>
-                </ul>
+            <div>
+                <a href="#" class="text-gray-700"><i class="fa fa-ellipsis-v fa-lg"></i></a>
             </div>
-            <div class="w-full lg:w-1/4 flex my-4 lg:my-0 lg:justify-end items-center">
-                <div class="mr-6">
-                    <button class="bg-primary-std hover:bg-primary-light text-white font-medium py-2 px-4 rounded-full">Following
-                    </button>
-                </div>
-                <div>
-                    <a href="#"
-                       class="text-gray-700"><i class="fa fa-ellipsis-v fa-lg"></i></a>
-                </div>
-            </div>
-        </div> <!-- end container -->
-    
-    </div>
-    
+        </div>
+    </div> <!-- end container -->
+
+</div>
