--- a/templates/navigation-3.html
+++ b/templates/navigation-3.html
@@ -3,7 +3,8 @@
     <a href="/" class="mr-4 w-32">
       <img src="https://stitches-cdn.hyperyolo.com/logo.png" class="rounded-full w-full" alt="logo">
     </a>
-    <input type="search" placeholder="Search" class="text-sm transition focus:outline-0 border border-transparent focus:bg-white focus:border-gray-400 placeholder-gray-900 rounded bg-gray-200 py-1 px-2 pl-10 appearance-none leading-normal ds-input">
+    <input type="search" placeholder="Search"
+      class="text-sm transition focus:outline-0 border border-transparent focus:bg-white focus:border-gray-400 placeholder-gray-900 rounded bg-gray-200 py-1 px-2 pl-10 appearance-none leading-normal ds-input">
     <ul class="text-sm text-gray-700  flex items-center">
       <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Status</a></li>
       <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Questions</a></li>
@@ -12,9 +13,9 @@
   <ul class="text-sm text-gray-700  flex items-center">
     <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Log In</a></li>
     <li>
-        <button class="bg-black hover:bg-gray-800 text-white ml-4 py-2 px-3">
-    Sign Up
-    </button>
+      <button class="bg-black hover:bg-gray-800 text-white ml-4 py-2 px-3">
+        Sign Up
+      </button>
     </li>
   </ul>
 </nav>
