--- a/templates/navigation-5.html
+++ b/templates/navigation-5.html
@@ -1,31 +1,27 @@
+<div class="bg-white text-gray-700 shadow-lg">
+    <div class="container mx-auto flex flex-col lg:flex-row items-center py-3">
+        <div class="w-full lg:w-1/5 text-center lg:my-0"><a href="#"><img class="w-32 mx-auto"
+                    src="images/assets/backer-color.png" alt="Logo" /></a>
+        </div>
+        <nav class="w-full lg:w-2/5">
+            <a href="#" class="text-sm p-4 font-semibold pb-6 text-primary-std">Home</a>
+            <a href="#" class="text-sm p-4 font-semibold pb-6 hover:text-primary-std"> Moments</a>
+            <a href="#" class="text-sm p-4 font-semibold pb-6 hover:text-primary-std"> Notifications</a>
+            <a href="#" class="text-sm p-4 font-semibold pb-6 hover:text-primary-std"> Messages</a>
 
-    <div class="bg-white text-gray-700 shadow-lg">
-        <div class="container mx-auto flex flex-col lg:flex-row items-center py-3">
-            <div class="w-full lg:w-1/5 text-center lg:my-0"><a href="#"><img class="w-32 mx-auto" src="images/assets/backer-color.png" alt="Logo"/></a>
-            </div>          
-            <nav class="w-full lg:w-2/5">
-                <a href="#"
-                   class="text-sm p-4 font-semibold pb-6 text-primary-std">Home</a>
-                <a href="#"
-                   class="text-sm p-4 font-semibold pb-6 hover:text-primary-std"> Moments</a>
-                <a href="#"
-                   class="text-sm p-4 font-semibold pb-6 hover:text-primary-std"> Notifications</a>
-                <a href="#"
-                   class="text-sm p-4 font-semibold pb-6 hover:text-primary-std"> Messages</a>
-    
-            </nav>
-            <div class="w-full lg:w-2/5 flex lg:justify-end items-center">
-                <div class="mr-4 relative">
-                    <input type="text"
-                           class="bg-gray-200 h-8 px-4 py-2 text-xs w-56 rounded-full focus:outline-none"
-                           placeholder="Search">
-                    <span class="flex items-center absolute right-0 inset-y-0 mr-3"><i class="fa fa-search text-gray-500"></i></span>
-                </div>
-                <div>
-                    <button class="text-sm text-secondary-light uppercase px-6 py-3 font-semibold hover:shadow">login</button>
-                    <button class="btn bg-primary-std text-sm text-white hover:shadow-2xl">sign up</button>
-                </div>
+        </nav>
+        <div class="w-full lg:w-2/5 flex lg:justify-end items-center">
+            <div class="mr-4 relative">
+                <input type="text" class="bg-gray-200 h-8 px-4 py-2 text-xs w-56 rounded-full focus:outline-none"
+                    placeholder="Search">
+                <span class="flex items-center absolute right-0 inset-y-0 mr-3"><i
+                        class="fa fa-search text-gray-500"></i></span>
+            </div>
+            <div>
+                <button
+                    class="text-sm text-secondary-light uppercase px-6 py-3 font-semibold hover:shadow">login</button>
+                <button class="btn bg-primary-std text-sm text-white hover:shadow-2xl">sign up</button>
             </div>
         </div>
     </div>
-    
+</div>
