--- a/templates/navigation-1.html
+++ b/templates/navigation-1.html
@@ -5,10 +5,12 @@
   <ul class="text-sm text-gray-700  flex items-center">
     <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Products</a></li>
     <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Pricing</a></li>
-    <li class="pr-2"><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">FAQs</a></li>
-    <li class="pl-2 border-l"><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Log In</a></li>
+    <li class="pr-2"><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">FAQs</a>
+    </li>
+    <li class="pl-2 border-l"><a href="#"
+        class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Log In</a></li>
     <button class="bg-primary-std hover:bg-primary-light text-white ml-4 py-2 px-3 rounded">
-    Sign Up
+      Sign Up
     </button>
   </ul>
 </nav>
