--- a/templates/notification-1.html
+++ b/templates/notification-1.html
@@ -1,7 +1,8 @@
 <section class="bg-gray-100 text-gray-900 py-4 lg:px-4" role="alert">
   <div class="container items-center flex max-w-6xl m-auto leading-none">
     <span class="flex rounded-full bg-gray-400 uppercase px-2 py-1 text-xs font-bold mr-3">New</span>
-    <span class="mr-2 text-left mr-auto">New Feature! It is a long established fact that a reader will be distracted.</span>
+    <span class="mr-2 text-left mr-auto">New Feature! It is a long established fact that a reader will be
+      distracted.</span>
     <span class="opacity-75 h-4 w-4"><i class="fas fa-chevron-right"></i></span>
   </div>
 </section>
