--- a/templates/progress-1.html
+++ b/templates/progress-1.html
@@ -1,20 +1,24 @@
 <section class="font-sans flex justify-between mt-6 mx-auto max-w-6xl">
   <a href="#" class="w-1/4 flex flex-col items-center text-center text-xs text-black no-underline">
-    <div class="bg-black text-white rounded-full h-8 w-8 flex items-center justify-center mb-2 z-10"><i class="fas fa-check"></i></div>
+    <div class="bg-black text-white rounded-full h-8 w-8 flex items-center justify-center mb-2 z-10"><i
+        class="fas fa-check"></i></div>
     <label class="font-bold uppercase tracking-wider">Step 1</label>
   </a>
   <a href="#" class="w-1/4 relative flex flex-col items-center text-center text-xs text-black no-underline">
-    <div class="bg-black text-white rounded-full h-8 w-8 flex items-center justify-center mb-2 z-10"><i class="fas fa-check"></i></div>
+    <div class="bg-black text-white rounded-full h-8 w-8 flex items-center justify-center mb-2 z-10"><i
+        class="fas fa-check"></i></div>
     <div class="absolute h-1 mt-4 bg-black inset-x-o -translate-50-50"></div>
     <label class="font-bold uppercase tracking-wider">Step 2</label>
   </a>
   <a href="#" class="w-1/4 relative flex flex-col items-center text-center text-xs text-black no-underline">
-    <div class="bg-black text-white rounded-full h-8 w-8 flex items-center justify-center mb-2 z-10"><i class="fas fa-check"></i></div>
+    <div class="bg-black text-white rounded-full h-8 w-8 flex items-center justify-center mb-2 z-10"><i
+        class="fas fa-check"></i></div>
     <div class="absolute h-1 mt-4 bg-black inset-x-o -translate-50-50"></div>
     <label class="font-bold uppercase tracking-wider">Step 3</label>
   </a>
   <a href="#" class="w-1/4 relative flex flex-col items-center text-center text-xs text-black no-underline">
-    <div class="bg-gray-700 text-white rounded-full h-8 w-8 flex items-center justify-center mb-2 z-10"><i class="fas fa-check"></i></div>
+    <div class="bg-gray-700 text-white rounded-full h-8 w-8 flex items-center justify-center mb-2 z-10"><i
+        class="fas fa-check"></i></div>
     <div class="absolute h-1 mt-4 bg-gray-700 inset-x-o -translate-50-50"></div>
     <label class="font-bold uppercase tracking-wider text-gray-700">Step 4</label>
   </a>
